# sms

./: README.md  Readme.md  package.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
backend/: .gitignore  insert-test-data.sh  models.py  pyproject.toml  requirements.txt  schemas.py  test.db  test.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/routers/: articles.py  elements.py  images.py  notes.py  projects.py
backend/app/schemas/: schemas.py
backend/app/tests/: test_sql_app.py
backend/scripts/: format.sh  lint.sh  runall.sh  test.sh
frontend/: README.md  package.json
frontend/android/app/: build.gradle
frontend/ios/stock/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
frontend/ios/stock.xcodeproj/: project.pbxproj
frontend/public/: index.css  index.html
frontend/src/: AddFab.js  App.js  createUUUID.js  projectData.js
frontend/src/Dialog/: ConfirmDialog.js  InputDialog.js
frontend/src/Editor/: AddNewElementFab.js  ConfirmAndDeleteButton.js  EditButton.js  Editor.js
frontend/src/Project/: AddNewArticleButton.js
frontend/src/navigation/: DrawerNavigator.js  StackNavigator.js
frontend/src/screens/: EditorScreen.js  Home.js  Login.js  ProjectScreen.js
frontend/stubby/: stubby.yml
ios/: Podfile
ios/stock.xcodeproj/xcshareddata/xcschemes/: stock-tvOS.xcscheme
public/: index.html
src/: App.js  icons.js  index.js
src/navigation/: DrawerNavigator.js  StackNavigator.js
src/screens/: Home.js
(+1 files in other folders)
