[tool.poetry]
name = "sms.backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
python-multipart = "^0.0.5"
sqlalchemy-stubs = "^0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
autoflake = "^1.4"
isort = "^5.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
